@@ -13,7 +13,12 @@
 typedef struct _NRVPath NRVPath;
 typedef struct _NRBPath NRBPath;
 
-#include <libnr/nr-matrix.h>
+enum {
+	NR_WIND_RULE_NONZERO,
+	NR_WIND_RULE_EVENODD
+};
+
+#include <libnr/nr-types.h>
 
 #include <libart_lgpl/art_vpath.h>
 #include <libart_lgpl/art_bpath.h>
@@ -31,9 +36,23 @@ union _NRPathElement {
 	float value;
 };
 
+/*
+ * VPath structure:
+ *   Number of elements
+ *   Number of segments
+ *   Length + closed
+ *   x, y, x, y...
+ */
+
 struct _NRVPath {
 	NRPathElement *elements;
 };
+
+/* fixme: (Lauris) */
+
+NRVPath *nr_vpath_setup_from_art_vpath (NRVPath *d, const ArtVpath *avpath);
+
+void nr_vpath_release (NRVPath *vpath);
 
 struct _NRBPath {
 	ArtBpath *path;
