@@ -16,7 +16,9 @@
 
 #include <libart_lgpl/art_misc.h>
 
+#include <libnr/nr-matrix.h>
 #include <libnr/nr-pixblock.h>
+
 #include "macros.h"
 #include "helper/art-utils.h"
 #include "display/nr-arena-glyphs.h"
