@@ -574,12 +574,22 @@ unsigned int
 sp_xml_dtoa (unsigned char *buf, double val, unsigned int tprec, unsigned int fprec, unsigned int padf)
 {
 	double dival, fval;
-	int ival, i;
+	int idigits, ival, i;
 	i = 0;
 	if (val < 0.0) {
 		buf[i++] = '-';
 		val = fabs (val);
 	}
+	/* Determine number of integral digits */
+	if (val >= 1.0) {
+		idigits = (int) floor (log10 (val));
+	} else {
+		idigits = 0;
+	}
+	/* Determine the actual number of fractional digits */
+	fprec = MAX (fprec, tprec - idigits);
+	/* Round value */
+	val += 0.5 * pow (10.0, - ((double) fprec));
 	/* Extract integral and fractional parts */
 	dival = floor (val);
 	ival = (int) dival;
@@ -600,9 +610,7 @@ sp_xml_dtoa (unsigned char *buf, double val, unsigned int tprec, unsigned int fp
 		buf[i++] = '0';
 		tprec -= 1;
 	}
-	fprec = MAX (tprec, fprec);
 	if ((fprec > 0) && (padf || (fval > 0.0))) {
-		fval += 0.5 * pow (10.0, -((double) fprec));
 		buf[i++] = '.';
 		while ((fprec > 0) && (padf || (fval > 0.0))) {
 			fval *= 10.0;
