@@ -1,3 +1,7 @@
+2003-05-01  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/svg/svg-length.c (sp_svg_number_write_d): Fixed rounding overflow
+
 2003-05-01  Christian Schaller <Uraeus@gnome.org>
 	* Fixed up desktop.in file to conform to latest freedesktop standard
 	* Fixed up spec.in file to actually work
